--- a/神经网络/articles/参数展开.md
+++ b/神经网络/articles/参数展开.md
@@ -10,16 +10,16 @@ D^{(1)}, D^{(2)}, D^{(3)}, ...
 
 $$
 
-这对于编程里面一些的API是不友善的，例如matlab或者octave的`fminunc()`方法，[scipy](https://www.scipy.org/)中的`minimize`方法等，这些方法都支持传递代价函数$$costFunction$$，但是代价函数只支持传递**向量**作为参数，因此，我们需要先将矩阵元素平铺开为一个长向量：
+这对于编程里面一些的 API 是不友善的，例如 matlab 或者 octave 的 `fminunc()` 方法，[scipy](https://www.scipy.org/) 中的 `minimize` 方法等，这些方法都支持传递代价函数 $$costFunction$$，但是代价函数只支持传递**向量**作为参数，因此，我们需要先将矩阵元素平铺开为一个长向量：
 
-matlab中展开：
+matlab 中展开：
 
 ```matlab
 thetaVector = [ Theta1(:); Theta2(:); Theta3(:); ]
 deltaVector = [ D1(:); D2(:); D3(:) ]
 ```
 
-python中展开：
+python 中展开：
 
 ```py
 import numpy as np
@@ -36,7 +36,7 @@ $$
 
 $$
 
-matlab中还原：
+matlab 中还原：
 
 ```matlab
 Theta1 = reshape(thetaVec(1:110),10,11)
@@ -44,7 +44,7 @@ Theta2 = reshape(thetaVec(111:220),10,11)
 Theta3 = reshape(thetaVec(221:231),1,11)
 ```
 
-python中还原：
+python 中还原：
 
 ```py
 import numpy as np
