--- a/神经网络/articles/梯度校验.md
+++ b/神经网络/articles/梯度校验.md
@@ -1,15 +1,19 @@
 梯度校验（Gradient Checking）
 ==============
 
-通常，直接使用BP算法可能会出现许多bug，因此，需要使用称为**梯度校验（Gradient Checking）**的手段。我们知道，$$J(\Theta)$$在$$\Theta$$处的倒数$$\frac{d}{d\Theta}J(\Theta)$$为该点的斜率，如下图蓝色线段所示：
+通常，直接使用BP算法可能会出现许多 bug，因此，需要使用称为**梯度校验（Gradient Checking）**的手段。我们知道，$$J(\Theta)$$ 在 $$\Theta$$ 处的倒数 $$\frac{d}{d\Theta}J(\Theta)$$ 为该点的斜率，如下图蓝色线段所示：
 
-![梯度近似](../attachments/梯度近似.png)
+<div style="text-align: center">
+<img src="../attachments/梯度近似.png" width="500"></img>
+</div>
 
-我们可以在点$$\Theta$$附近的小区间$$[\Theta-\epsilon,\Theta+\epsilon]$$（$$\epsilon$$足够小），构造下图所示的红色直角三角形：
+我们可以在点 $$\Theta$$ 附近的小区间 $$[\Theta-\epsilon,\Theta+\epsilon]$$（$$\epsilon$$ 足够小），构造下图所示的红色直角三角形：
 
-![梯度近似2](../attachments/梯度近似2.png)
+<div style="text-align: center">
+<img src="../attachments/梯度近似2.png" width="500"></img>
+</div>
 
-则斜边的斜率可以近似等于蓝色线段的斜率，亦即，可以通过求取红色斜边的斜率来近似$$\frac{d}{d\Theta}J(\Theta)$$：
+则斜边的斜率可以近似等于蓝色线段的斜率，亦即，可以通过求取红色斜边的斜率来近似 $$\frac{d}{d\Theta}J(\Theta)$$：
 
 $$
 
@@ -17,17 +21,17 @@ $$
 
 $$
 
-> 通常，$$\epsilon$$取较小值，如$$0.01$$。
+> 通常，$$\epsilon$$ 取较小值，如 $$0.01$$。
 
-包含有梯度校验的BP算法如下：
+包含有梯度校验的 BP 算法如下：
 
-1. 首先由反向传播算法获得展开的$$DVec$$:
+1. 首先由反向传播算法获得展开的 $$DVec$$:
 $$
 
 DVec = [D^{(1)},D^{(2)},D^{(3)},...D^{(n)}]
 
 $$
-2. 计算梯度近似$$gradApprox$$，$$\theta_j$$是$$\Theta^{j}$$的展开：
+2. 计算梯度近似 $$gradApprox$$，$$\theta_j$$ 是 $$\Theta^{j}$$ 的展开：
 $$
 
 \begin{align*}
@@ -37,7 +41,7 @@ $$
 \end{align*}
 
 $$
-3. 比较$$gradApprox$$与$$DVec$$的相似程度（比如可以用[欧氏距离](https://zh.wikipedia.org/wiki/%E6%AC%A7%E5%87%A0%E9%87%8C%E5%BE%97%E8%B7%9D%E7%A6%BB)）：
+3. 比较 $$gradApprox$$ 与 $$DVec$$ 的相似程度（比如可以用[欧氏距离](https://zh.wikipedia.org/wiki/%E6%AC%A7%E5%87%A0%E9%87%8C%E5%BE%97%E8%B7%9D%E7%A6%BB)）：
 
 $$
 
