--- a/神经网络/articles/神经网络概述.md
+++ b/神经网络/articles/神经网络概述.md
@@ -3,7 +3,10 @@
 
 人体神经元模型
 -----------
-![人体神经元模型](../attachments/人体神经元模型.png)
+
+<div style="text-align: center">
+<img src="../attachments/人体神经元模型.png" width="500"></img>
+</div>
 
 神经元的可以分为四个区域：
 
@@ -14,15 +17,18 @@
 
 人工神经网络
 ------------
+
 人工神经网络（ANN：Artificial Neural Network），简称神经网络（NN：Neural Network）。迄今为止，人工神经网络尚无统一定义，其实一种模拟了人体神经元构成的数学模型，依靠系统的复杂程度，通过调整内部大量节点之间相互连接的关系，从而达到处理信息的目的。
 
-![人工神经网络模型](../attachments/人工神经网络模型.png)
+<div style="text-align: center">
+<img src="../attachments/人工神经网络模型.png" width="500"></img>
+</div>
 
 上图显示了人工神经网络是一个分层模型，逻辑上可以分为三层：
 
-- **输入层**：输入层接收特征向量$$x$$。
-- **输出层**：输出层产出最终的预测$$h$$。
-- **隐含层**：隐含层介于输入层与输出层之间，之所以称之为隐含层，是因为当中产生的值并不像输入层使用的样本矩阵$$X$$或者输出层用到的标签矩阵$$y$$那样直接可见。
+- **输入层**：输入层接收特征向量 $$x$$。
+- **输出层**：输出层产出最终的预测 $$h$$。
+- **隐含层**：隐含层介于输入层与输出层之间，之所以称之为隐含层，是因为当中产生的值并不像输入层使用的样本矩阵 $$X$$ 或者输出层用到的标签矩阵 $$y$$ 那样直接可见。
 
 参考资料
 ------------
