--- a/神经网络/articles/神经网络解决多分类问题.md
+++ b/神经网络/articles/神经网络解决多分类问题.md
@@ -8,11 +8,15 @@
 3. 摩托车图像
 4. 卡车图像
 
-![图像多分类问题](../attachments/图像多分类问题.png)
+<div style="text-align: center">
+<img src="../attachments/图像多分类问题.png" width="500"></img>
+</div>
 
 这是一个多分类问题，由于图像特征较多，因此我们可以考虑设计含有多个隐含层的神经网络来完成特征优化（扩展）：
 
-![多分类问题网络设计](../attachments/多分类问题网络设计.png)
+<div style="text-align: center">
+<img src="../attachments/多分类问题网络设计.png" width="400"></img>
+</div>
 
 注意，我们设计了一个含有多个输出的神经网络，亦即，我们会用01的组合来定义不同的分类：
 
@@ -34,7 +38,7 @@ y^{(i)} =
 
 $$
 
-而不是使用标量来定义分类，这样使得我们容易利用上简单的sigmoid函数来进行预测：
+而不是使用标量来定义分类，这样使得我们容易利用上简单的 sigmoid 函数来进行预测：
 
 $$
 
