--- a/神经网络/articles/神经网络解决逻辑运算问题.md
+++ b/神经网络/articles/神经网络解决逻辑运算问题.md
@@ -15,7 +15,9 @@ $$
 
 可以发现，逻辑运算可以转换为一个**01分类问题**。在sigmoid函数中:
 
-![sigmoid性质](../attachments/sigmoid性质.png)
+<div style="text-align: center">
+<img src="../attachments/sigmoid性质.png" width="300"></img>
+</div>
 
 $$
 
@@ -55,7 +57,9 @@ $$
 
 生成的神经网络如下图所示：
 
-![逻辑AND运算](../attachments/逻辑AND运算.png)
+<div style="text-align: center">
+<img src="../attachments/逻辑AND运算.png" width="300"></img>
+</div>
 
 得到的逻辑运算结果：
 
