--- a/神经网络/articles/随机初始化权值.md
+++ b/神经网络/articles/随机初始化权值.md
@@ -1,23 +1,25 @@
 权值初始化
 ============
 
-0值初始化
+0 值初始化
 --------------
 
-在逻辑回归中，我们通常会初始化所有权值为$$0$$，假如在如下的神经网络也采用0值初始化：
+在逻辑回归中，我们通常会初始化所有权值为 $$0$$，假如在如下的神经网络也采用 0 值初始化：
 
-![0值初始化](../attachments/0值初始化.png)
+<div style="text-align: center">
+<img src="../attachments/0值初始化.png" width="600"></img>
+</div>
 
 则可以得到：
 
 $$
 
-\begin{align *}
+\begin{align*}
 & a_1^{(1)} = a_2^{(2)} \\
-& \mbox{则 $\delta_1^{(1)} = \delta_2^{(1)}}$} \\
-& \mbox{则 \frac{\partial}{\partial \Theta_{01}^{1}}J(\Theta) = \frac{\partial}{\partial \Theta_{02}^{1}}J(\Theta)}
+& \mbox{则 $\delta_1^{(1)} = \delta_2^{(1)}$} \\
+& \mbox{则 $\frac{\partial}{\partial \Theta_{01}^{(1)}J(\Theta)}$} = \frac{\partial}{\partial \Theta_{02}^{(1)}}J(\Theta) \\
+& \mbox{则更新后的权值：$\Theta_{01}^{(1)}$} = \Theta_{02}^{(1)}
 \end{align*}
-& \mbox{则更新后的权值：\Theta_{01}^{(1)} = \Theta_{02}^{(1)}}
 
 $$
 
@@ -27,7 +29,7 @@ $$
 随机初始化
 --------------------
 
-我们看到了固定值初始化将会是神经网络丧失其特性，因此，对于各层的权值矩阵，采用随机初始化策略。随机值产生的区间我们定义为$$[-\epsilon, +\epsilon]$$，并假定：
+我们看到了固定值初始化将会是神经网络丧失其特性，因此，对于各层的权值矩阵，采用随机初始化策略。随机值产生的区间我们定义为 $$[-\epsilon, +\epsilon]$$，并假定：
 
 $$
 
@@ -35,14 +37,14 @@ $$
 
 $$
 
-在matlab中，随机初始化权值的代码如下：
+在 matlab 中，随机初始化权值的代码如下：
 
 ```matlab
 Theta1 = rand(10,11) * (2 * INIT_EPSILON) - INIT_EPSILON;
 Theta2 = rand(10,11) * (2 * INIT_EPSILON) - INIT_EPSILON;
 ```
 
-在python中，随机初始化权值的代码如下：
+在 python 中，随机初始化权值的代码如下：
 
 ```python
 import numpy as np
