--- a/神经网络/codes/多分类问题.md
+++ b/神经网络/codes/多分类问题.md
@@ -1,13 +1,17 @@
 程序示例--多分类问题
 ===========
 
-我们手上包含有手写字符的数据集，该数据集来自斯坦福机器学习的课后作业，每个字符图片大小为$$20\times20$$，总的样本规模为$$5000 \times 400$$，
+我们手上包含有手写字符的数据集，该数据集来自斯坦福机器学习的课后作业，每个字符图片大小为 $$20\times20$$，总的样本规模为 $$5000 \times 400$$，
 
-![手写字符集](../attachments/手写字符集.jpg)
+<div style="text-align: center">
+<img src="../attachments/手写字符集.jpg" width="500"></img>
+</div>
 
-我们的神经网络设计如下，包含1个隐含层，隐层含25个神经元，：
+我们的神经网络设计如下，包含 1 个隐含层，隐层含 25 个神经元，：
 
-![手写字符集的网络设计](../attachments/手写字符集的网络设计.jpg)
+<div style="text-align: center">
+<img src="../attachments/手写字符集的网络设计.jpg" width="300"></img>
+</div>
 
 ```python
 # coding: utf-8
