--- a/神经网络/codes/逻辑运算.md
+++ b/神经网络/codes/逻辑运算.md
@@ -1,8 +1,12 @@
 程序示例--逻辑运算
 ==============
+
 我们使用感知器神经网络来描述逻辑AND运算：
 
-![逻辑AND运算网络设计](../attachments/逻辑AND运算网络设计.jpg)
+<div style="text-align: center">
+<img src="../attachments/逻辑AND运算网络设计.jpg" width="300"></img>
+</div>
+
 
 代码：
 
