--- a/神经网络/articles/感知器.md
+++ b/神经网络/articles/感知器.md
@@ -3,7 +3,9 @@
 
 [感知器](https://zh.wikipedia.org/wiki/%E6%84%9F%E7%9F%A5%E5%99%A8)是最简单的神经网络结果，其不包含隐含层：
 
-![感知器](../attachments/逻辑AND运算网络设计.jpg)
+<div style="text-align:center">
+<img src="../attachments/逻辑AND运算网络设计.jpg" width="300"></img>
+</div>
 
 数学的简单表单为：
 
@@ -23,6 +25,7 @@ h_\theta(x)
 $$
 
 其输出为：
+
 $$
 
 h_\theta(x) = a_1(2) = \Theta^{(1)}a^{(1)} = \Theta^{(1)}x
