--- a/算法分析与优化/articles/数据集划分.md
+++ b/算法分析与优化/articles/数据集划分.md
@@ -6,7 +6,9 @@
 
 在线性回归的章节中，我们已经知道，仅仅具备一个很小的训练误差并不能保证我们的预测函数就是优秀的，因为这种“优秀”仅仅体现在了对于已知的训练样本的假设上，而无法保证见到新的样本时候还能做出足够好的预测，过拟合就是当中的典型例子：
 
-![过拟合](../attachments/过拟合.jpg)
+<div style="text-align:center">
+<img src="../attachments/过拟合.jpg" width="300"></img>
+</div>
 
 因此，预测准不准应当反映在对于新样本的泛化（generalize）能力，我们考虑将数据集划分为：
 
@@ -24,7 +26,8 @@
 
 ### 线性回归的测试误差
 
-在线性回归中，我们就通过计算测试集的代价函数来评估参数$$\theta$$的泛化能力：
+在线性回归中，我们就通过计算测试集的代价函数来评估参数 $$\theta$$的泛化能力：
+
 $$
 
 J_{test} = \frac{1}{2m_{test}}\sum_{i=1}^{m_test}(h_{\theta}(x_{test}^{(i)})-y_{test}^{i})^2
@@ -65,9 +68,11 @@ $$
 
 在多项式回归中，我们总是尝试不同的多项式次数（$$degree$$），形成了不同的预测模型：
 
-![不同的预测模型](../attachments/不同的预测模型.jpg)
+<div style="text-align:center">
+<img src="../attachments/不同的预测模型.jpg" width="500"></img>
+</div>
 
-我们计算各个模型的对应的测试误差，假设$$degree=5$$时，测试误差最小，我们就选出了以下模型来迎接新的样本：
+我们计算各个模型的对应的测试误差，假设 $$degree=5$$ 时，测试误差最小，我们就选出了以下模型来迎接新的样本：
 
 $$
 
@@ -75,9 +80,9 @@ h_\theta(x) = \theta_0+\theta_1x+.....+\theta_5x^{5}
 
 $$
 
-对于$$degree$$的确定，是我们对于模型的选择（Model Selection），正如我们在线性回归中确定$$\theta$$一样。在线性回归中，我们通过训练集确定模型，测试集来评估模型的泛化能力。在多项式回归中，我们通过训练集获得了参数$$\theta$$，而通过测试集确定了模型，那么，这两个集合用完了，我们就缺少评估模型泛化能力的数据集。鉴于此，引入了**交叉验证集（Cross Validation Set）**，**“交叉”**二字体现了一种承上启下的关系，他通过训练集获得的结果，选择了模型，并将该模型交给测试集进行评估：
+对于 $$degree$$ 的确定，是我们对于模型的选择（Model Selection），正如我们在线性回归中确定 $$\theta$$ 一样。在线性回归中，我们通过训练集确定模型，测试集来评估模型的泛化能力。在多项式回归中，我们通过训练集获得了参数 $$\theta$$，而通过测试集确定了模型，那么，这两个集合用完了，我们就缺少评估模型泛化能力的数据集。鉴于此，引入了**交叉验证集（Cross Validation Set）**，**“交叉”**二字体现了一种承上启下的关系，他通过训练集获得的结果，选择了模型，并将该模型交给测试集进行评估：
 
-- **训练集**：60%，确定参数$$\theta$$
+- **训练集**：60%，确定参数 $$\theta$$
 - **交叉验证集**：20%，进行模型选择。
 - **测试集**：20%，评价模型预测能力。
 
