--- a/算法分析与优化/codes/算法诊断.md
+++ b/算法分析与优化/codes/算法诊断.md
@@ -33,7 +33,7 @@ Xtest = np.concatenate((np.ones((Xtest.shape[0], 1)), Xtest), axis=1)
 ytest = np.mat(data['ytest'])
 ```
 
-接着，我们会使用训练集来获得线性回归的拟合曲线，并且观测**随样本大小$$m$$变化的学习曲线**：
+接着，我们会使用训练集来获得线性回归的拟合曲线，并且观测**随样本大小 $$m$$ 变化的学习曲线**：
 
 ```python
 # algorithm_analysis/diagnose.py
@@ -85,9 +85,13 @@ def diagnoseLR():
     plt.show()
 ```
 
-![算法诊断-线性回归拟合](../attachments/diagnose_lr_fitting.png)
+<div style="text-align:center">
+<img src="../attachments/diagnose_lr_fitting.png" width="500"></img>
+</div>
 
-![算法诊断-线性回归学习曲线](../attachments/diagnose_lr_curve.png)
+<div style="text-align:center">
+<img src="../attachments/diagnose_lr_curve.png" width="500"></img>
+</div>
 
 通过观测学习曲线，我们估计算法出现了**高偏差（High Bias）**情况，因此，我们通过多项式回归来提高拟合精度：
 
@@ -141,10 +145,14 @@ def diagnosePR():
     plt.show()
 ```
 
-由于多项式回归可能引起过拟合问题，因此我们还考虑了正规化，并且获得了随不同的正规化参数$$\lambda$$变化的学习曲线:
+由于多项式回归可能引起过拟合问题，因此我们还考虑了正规化，并且获得了随不同的正规化参数 $$\lambda$$ 变化的学习曲线:
 
-![算法诊断-多项式回归学习曲线](../attachments/diagnose_pr_curve.png)
+<div style="text-align:center">
+<img src="../attachments/diagnose_pr_curve.png" width="500"></img>
+</div>
 
-借此知道了在$$\lambda=0.001$$的时候，交叉验证集误差最小，此时我们绘制拟合曲线：
+借此知道了在 $$\lambda=0.001$$ 的时候，交叉验证集误差最小，此时我们绘制拟合曲线：
 
-![算法诊断-多项式回归拟合曲线](../attachments/diagnose_pr_fitting.png)
+<div style="text-align:center">
+<img src="../attachments/diagnose_pr_fitting.png" width="500"></img>
+</div>
