--- a/神经网络/articles/前向传播与反向传播.md
+++ b/神经网络/articles/前向传播与反向传播.md
@@ -6,13 +6,13 @@
 
 神经网络每层都包含有若干神经元，层间的神经元通过**权值矩阵 $$\Theta^{l}$$ **连接。一次信息传递过程可以如下描述：
 
-1. 第$$j$$层神经元接收上层传入的**刺激（神经冲动）**：
+1. 第 $$j$$ 层神经元接收上层传入的**刺激（神经冲动）**：
 $$
 
 z^{(j)} = \Theta^{(j-1)}a^{(j-1)}
 
 $$
-2. 该刺激经**激励函数（activation function）$$g$$ **作用后，会产生一个激活向量 $$a^{j}$$，$$a_i^{j}$$ 表示的就是 $$j$$ 层第 $$i$$ 个神经元获得的**激活值（activation）**：
+2. 该刺激经**激励函数（activation function）$$g$$ **作用后，会产生一个激活向量 $$a^{j}$$。$$a_i^{j}$$ 表示的就是 $$j$$ 层第 $$i$$ 个神经元获得的**激活值（activation）**：
 $$
 
 a^{(j)} = g(z^{(j)})
@@ -96,7 +96,7 @@ J(\Theta) = - \frac{1}{m}\sum(Y^{T} .* log(\Theta A)) + log(1-\Theta A).*(1-Y^{T
 
 $$
 
-其中，$$.*$$ 代表点乘操作，$$A \in R^{K \times m}$$ 为所有样本对应的输出矩阵，其每一列对应一个样本的输出，$$Y \in R^{m \times K}$$ 为标签矩阵，其每行对应一个样本的类型。
+其中，$$.*$$ 代表**点乘**操作，$$A \in R^{(K \times m)}$$ 为所有样本对应的输出矩阵，其每一列对应一个样本的输出，$$Y \in R^{(m \times K)}$$ 为标签矩阵，其每行对应一个样本的类型。
 
 反向传播过程（Back Propagation）
 -------------------
@@ -121,13 +121,13 @@ g'(z^{(l)}) = a^{(l)} .* (1-a^{(l)})
 
 $$
 
-反向传播中的反向二字也正是从该公式中得来，本层的误差 $$\delta^{l}$$ 需要由下一层的误差 $$\delta^{(l+1)}$$ **反向**推导。
+反向传播中的反向二字也正是从该公式中得来，本层的误差 $$\delta^{(l)}$$ 需要由下一层的误差 $$\delta^{(l+1)}$$ **反向**推导。
 
 <div style="text-align:center">
 <img src="../attachments/反向传播.jpg" width="300"></img>
 </div>
 
-完整训练过程
+训练过程
 ------------
 
 假定有训练集 $${(x^{(1)}, y^{(1)}),...,(x^{(m)},y^{(m)})}$$，使用了反向传播的神经网络训练过程如下：
