--- a/神经网络/articles/感知器.md
+++ b/神经网络/articles/感知器.md
@@ -1,7 +1,7 @@
 感知器
 ============
 
-[感知器](https://zh.wikipedia.org/wiki/%E6%84%9F%E7%9F%A5%E5%99%A8)是最简单的神经网络结果，其不包含隐含层：
+[感知器](https://zh.wikipedia.org/wiki/%E6%84%9F%E7%9F%A5%E5%99%A8)是最简单的神经网络结构，其不包含隐含层：
 
 <div style="text-align:center">
 <img src="../attachments/逻辑AND运算网络设计.jpg" width="300"></img>
