--- a/神经网络/articles/神经网络解决逻辑运算问题.md
+++ b/神经网络/articles/神经网络解决逻辑运算问题.md
@@ -4,9 +4,8 @@
 神经网络通过不同的架构设置，来完成不同的任务，比如我们看到一半的逻辑**与**运算：
 
 $$
-
+\mbox{$x_1$ AND $x_2$} =  
 \begin{cases}
-x_1 AND x_2 =
 1 & \mbox{if $x_1=1$ and $x_2=1$}\\
 0 & \mbox{otherwise}
 \end{cases}
