--- a/神经网络/articles/随机初始化权值.md
+++ b/神经网络/articles/随机初始化权值.md
@@ -23,8 +23,7 @@ $$
 
 $$
 
-亦即，每次迭代，所有权值的数值都一样，这意味着，隐含层的神经元激活值也将一样，也就是无论隐含层层数有多少，各层的神经元有多少，由于各层的神经元激活值大小一样，也就相当于各层只有一个有效神经元（特征），这就失去了神经网络进行特征扩展和优化
-的本意了。
+亦即，每次迭代，所有权值的数值都一样，这意味着，隐含层的神经元激活值也将一样，也就是无论隐含层层数有多少，各层的神经元有多少，由于各层的神经元激活值大小一样，也就相当于各层只有一个有效神经元（特征），这就失去了神经网络进行特征扩展和优化的本意了。
 
 随机初始化
 --------------------
