--- a/算法分析与优化/articles/偏差与方差.md
+++ b/算法分析与优化/articles/偏差与方差.md
@@ -98,9 +98,9 @@ $$
 
 | 手段                   | 使用场景   |
 |:-----------------------|:-----------|
-| **采集更多的样本       | **高方差** |
-| **降低特征维度         | **高方差** |
-| **采集更多的特征       | **高偏差** |
-| **进行高次多项式回归   | **高偏差** |
-| **降低参数 $$\lambda$$ | **高方差** |
-| **增大参数 $$\lambda$$ | **高偏差** |
+| 采集更多的样本       | **高方差** |
+| 降低特征维度         | **高方差** |
+| 采集更多的特征       | **高偏差** |
+| 进行高次多项式回归   | **高偏差** |
+| 降低参数 $$\lambda$$ | **高方差** |
+| 增大参数 $$\lambda$$ | **高偏差** |
