--- a/算法分析与优化/articles/大数据集.md
+++ b/算法分析与优化/articles/大数据集.md
@@ -5,7 +5,7 @@
 
 > It's not who has the best algorithm that wins. It's who has the most data.
 
-所以商业社会中，互联网公司都不遗余力地先收集一波大数据再说，没有数据，再多的手段也是空谈。下图中，是一个区分容易混淆单词的机器学习案例，所采用的几种算法在训练样本给的越来越多时，都表现的越来越优异：
+所以商业社会中，互联网公司都不遗余力地先收集一波大数据再说，没有数据，再多的手段也是空谈。下图中，是一个区分容易混淆单词的机器学习案例，所采用的几种算法在训练样本提供的样本越来越多时，都表现得越来越优异：
 
 <div style="text-align:center">
 <img src="../attachments/区分易混淆单词.png" width="500"></img>
