--- a/算法分析与优化/articles/数据集划分.md
+++ b/算法分析与优化/articles/数据集划分.md
@@ -10,7 +10,7 @@
 <img src="../attachments/过拟合.jpg" width="300"></img>
 </div>
 
-因此，预测准不准应当反映在对于新样本的泛化（generalize）能力，我们考虑将数据集划分为：
+因此，预测准不准应当反映在对于新样本的泛化（generalize）能力。我们考虑将数据集划分为：
 
 - **训练集**：70%
 - **测试集**：30%
@@ -21,16 +21,16 @@
 
 - $$(x^{(1)},y^{(1)})$$：训练样本
 - $$(x_{test}^{(1)},y_{test}^{(1)})$$：测试样本
-- $$m$$：训练集样本rongl
+- $$m$$：训练集样本容量
 - $$m_{test}$$：测试集样本容量
 
 ### 线性回归的测试误差
 
-在线性回归中，我们就通过计算测试集的代价函数来评估参数 $$\theta$$的泛化能力：
+在线性回归中，我们就通过计算测试集的代价函数来评估参数 $$\theta$$ 的泛化能力：
 
 $$
 
-J_{test} = \frac{1}{2m_{test}}\sum_{i=1}^{m_test}(h_{\theta}(x_{test}^{(i)})-y_{test}^{i})^2
+J_{test} = \frac{1}{2m_{test}}\sum_{i=1}^{m_{test}}(h_{\theta}(x_{test}^{(i)})-y_{test}^{(i)})^2
 
 $$
 
@@ -44,13 +44,13 @@ J_{test}(\theta)=-\frac{1}{m_{test}}\sum\limits_{i=1}^{m_{test}}(y_{test}^{(i)}l
 
 $$
 
-由于逻辑回归处理的是01分类问题，其预测结果只有正确与错误之分，所以引入误分率（Misclassification Error）：
+由于逻辑回归处理的是 0/1 分类问题，其预测结果只有正确与错误之分，所以引入误分率（Misclassification Error）：
 
 $$
 
 err(h_\theta(x),y)=
-\begin{cases} 1 &\mbox{if $h_\theta(x) \geq 0.5,y=0 $ or $h_\theta(x) \lt 0.5,y=1$} \\
-0 & \mbox{otherwise}
+\begin{cases} 1,&\mbox{if $h_\theta(x) \geq 0.5,y=0 $ or $h_\theta(x) \lt 0.5,y=1$} \\
+0, & \mbox{otherwise}
 \end{cases}
 
 $$
@@ -68,15 +68,25 @@ $$
 
 在多项式回归中，我们总是尝试不同的多项式次数（$$degree$$），形成了不同的预测模型：
 
-<div style="text-align:center">
-<img src="../attachments/不同的预测模型.jpg" width="500"></img>
-</div>
+$$
+
+\begin{align*}
+
+& 1. \quad h_\theta(x) = \theta_0+\theta_1x \\
+& 2. \quad h_\theta(x) = \theta_0+\theta_1x+\theta_2x^2 \\
+& 3. \quad h_\theta(x) = \theta_0+\theta_1x+...+\theta_3x^3 \\
+& 4. \quad h_\theta(x) = \theta_0+\theta_1x+...+\theta_4x^4 \\
+& 5. \quad h_\theta(x) = \theta_0+\theta_1x+...+\theta_5x^5
+
+\end{align*}
+
+$$
 
 我们计算各个模型的对应的测试误差，假设 $$degree=5$$ 时，测试误差最小，我们就选出了以下模型来迎接新的样本：
 
 $$
 
-h_\theta(x) = \theta_0+\theta_1x+.....+\theta_5x^{5}
+h_\theta(x) = \theta_0+\theta_1x+...+\theta_5x^{5}
 
 $$
 
@@ -92,7 +102,7 @@ $$
 
 $$
 
-J_{train}(\theta) = \frac{1}{2m}\sum\limits_{i=1}^{m}(h_\theta(x^{(i)})-y{(i)})^2
+J_{train}(\theta) = \frac{1}{2m}\sum\limits_{i=1}^{m_{train}}(h_\theta(x_{train}^{(i)})-y_{train}^{(i)})^2
 
 $$
 
@@ -100,7 +110,7 @@ $$
 
 $$
 
-J_{cv}(\theta) = \frac{1}{2m}\sum\limits_{i=1}^{m}(h_\theta(x_{cv}^{(i)})-y_{cv}{(i)})^2
+J_{cv}(\theta) = \frac{1}{2m}\sum\limits_{i=1}^{m_{cv}}(h_\theta(x_{cv}^{(i)})-y_{cv}^{(i)})^2
 
 $$
 
@@ -108,6 +118,6 @@ $$
 
 $$
 
-J_{test}(\theta) = \frac{1}{2m}\sum\limits_{i=1}^{m}(h_\theta(x_{test}^{(i)})-y_{test}{(i)})^2
+J_{test}(\theta) = \frac{1}{2m}\sum\limits_{i=1}^{m_{test}}(h_\theta(x_{test}^{(i)})-y_{test}^{(i)})^2
 
 $$
