--- a/算法分析与优化/articles/陷入不归路的调试.md
+++ b/算法分析与优化/articles/陷入不归路的调试.md
@@ -5,7 +5,7 @@
 
 $$
 
-J(\theta) = \frac{1}{2m} [\sum\limits_{i=1}^m(h_\theta(x^{(i)})-y^{(i)})^2+\lambda\sum\limits_{i=1}^m\theta_j^2)]
+J(\theta) = \frac{1}{2m} [\sum\limits_{i=1}^m(h_\theta(x^{(i)})-y^{(i)})^2+\lambda\sum\limits_{i=1}^m\theta_j^2]
 
 $$
 
