--- a/线性回归/articles/正规方程.md
+++ b/线性回归/articles/正规方程.md
@@ -4,7 +4,7 @@
 定义
 -----------
 
-前面论述的线性回归问题中，我们通过梯度下降法来求得 $$J(\theta)$$ 的最小值，但是对于学习率 $$\alpha$$ 的调节有时候使得我们非常恼火。为此，我们可通过如下矩阵式来最小化 $$J(\theta)$$：
+前面论述的线性回归问题中，我们通过梯度下降法来求得 $$J(\theta)$$ 的最小值，但是对于学习率 $$\alpha$$ 的调节有时候使得我们非常恼火。为此，我们可通过**正规方程**来最小化 $$J(\theta)$$：
 
 $$
 \theta=(X^TX)^{-1}X^Ty
@@ -17,17 +17,9 @@ $$
 梯度下降与正规方程的对比
 ---------
 
-### 梯度下降
-
-- 需要选择适当的学习率 $$\alpha$$
-- 需要进行多步迭代
-- 对多特征适应性较好，能在特征数量很多时仍然工作良好
-- 能应用到一些更加复杂的算法中，如逻辑回归（Logic Regression）等
-
-### 正规方程
-
-- 不要学习率 $$\alpha$$
-- 不需要进行迭代，在 Matlab 等平台上，矩阵运算仅需一行代码就可完成
-- 算法复杂度为 $$O(n^3)$$，所以如果特征维度太高（特别是超过 10000 维），那么不宜再考虑该方法。
-- 矩阵需要可逆
-- 对于一些更复杂的算法，该方法无法工作
+| 梯度下降                                                       | 正规方程                                                                                     |
+|:---------------------------------------------------------------|:---------------------------------------------------------------------------------------------|
+| 需要选择适当的学习率 $$\alpha$$                                | 不要学习率 $$\alpha$$                                                                        |
+| 需要进行多步迭代                                               | 不需要进行迭代，在 Matlab 等平台上，矩阵运算仅需一行代码就可完成                             |
+| 对多特征适应性较好，能在特征数量很多时仍然工作良好             | 算法复杂度为 $$O(n^3)$$，所以如果特征维度太高（特别是超过 10000 维），那么不宜再考虑该方法。 |
+| 能应用到一些更加复杂的算法中，如逻辑回归（Logic Regression）等 | 矩阵需要可逆，并且，对于一些更复杂的算法，该方法无法工作                                     |
