--- a/线性回归/codes/多项式回归.md
+++ b/线性回归/codes/多项式回归.md
@@ -1,7 +1,7 @@
 程序示例--多项式回归
 ==============
 
-下面，我们有一组温度（temperature）和实验产出量（yield）训练样本，该数据来源于博客[Polynomial Regression Examples](https://onlinecourses.science.psu.edu/stat501/node/325)：
+下面，我们有一组温度（temperature）和实验产出量（yield）训练样本，该数据由博客 [Polynomial Regression Examples](https://onlinecourses.science.psu.edu/stat501/node/325) 所提供：
 
 | temperature | yield |
 |:------------|:------|
