--- a/线性回归/codes/局部加权线性回归.md
+++ b/线性回归/codes/局部加权线性回归.md
@@ -1,7 +1,7 @@
 程序示例--局部加权线性回归
 ==============
 
-现在，我们在 `regression.py` 中又添加了 `JLwr()` 方法用于计算预测代价，以及 `lwr()` 方法用于完成局部加权线性回归：
+现在，我们在回归中又添加了 `JLwr()` 方法用于计算预测代价，以及 `lwr()` 方法用于完成局部加权线性回归：
 
 ```python
 # coding: utf-8
