--- a/线性回归/codes/梯度下降.md
+++ b/线性回归/codes/梯度下降.md
@@ -1,10 +1,10 @@
 程序示例--梯度下降
 =============
 
-回归程序
+回归模块
 -------------
 
-下面我们将撰写程序，其中提供了**批量梯度下降**和**随机梯度下降**两种学习策略来求解回归方程：
+回归模块中提供了**批量梯度下降**和**随机梯度下降**两种学习策略来训练模型：
 
 ```python
 # coding: utf-8
