--- a/逻辑回归/articles/利用正规化解决过拟合问题.md
+++ b/逻辑回归/articles/利用正规化解决过拟合问题.md
@@ -3,9 +3,11 @@
 
 在之前的文章中，我们认识了**过拟合**问题,通常，我们有如下策略来解决过拟合问题：
 
-1. 减少特征数，显然这只是权宜之计，因为特征意味着信息，放弃特征也就等同于丢弃信息，恩，舍不得，要知道，特征的获取往往也是艰苦卓绝的。
+1. 减少特征数，显然这只是权宜之计，因为特征意味着信息，放弃特征也就等同于丢弃信息，要知道，特征的获取往往也是艰苦卓绝的。
 
-2. 不放弃特征，而是拉伸曲线使之更加平滑以解决过拟合问题，为了拉伸曲线，也就要弱化一些高阶项（曲线曲折的罪魁祸首），由于高阶项中的特征无法更改，因此特征是无法弱化的，我们能弱化的只有高阶项中的系数 $$\theta_i$$，并且，我们把这种弱化称之为是对参数 $$\theta$$ 的惩罚（penalize）。**Regularization（正规化）**正是完成这样一种惩罚的“侩子手”，如下例所示，我们将 $$\theta_3$$ 及 $$\theta_4$$ 减小到趋近于 0，原本过拟合的曲线就变得更加平滑，趋近于一条二次曲线（在本例中，二次曲线显然更能反映住房面积和房价的关系），也就能够更好的根据住房面积来预测房价（要知道，预测才是我们的最终目的，而非拟合）。
+2. 不放弃特征，而是拉伸曲线使之更加平滑以解决过拟合问题，为了拉伸曲线，也就要弱化一些高阶项（曲线曲折的罪魁祸首）。由于高阶项中的**特征 $$x$$ **无法更改，因此特征是无法弱化的，我们能弱化的只有高阶项中的**系数 $$\theta_i$$**。我们把这种弱化称之为是对参数 $$\theta$$ 的惩罚（penalize）。**Regularization（正规化）**正是完成这样一种惩罚的“侩子手”。
+
+如下例所示，我们将 $$\theta_3$$ 及 $$\theta_4$$ 减小（惩罚）到趋近于 $$0$$，原本过拟合的曲线就变得更加平滑，趋近于一条二次曲线（在本例中，二次曲线显然更能反映住房面积和房价的关系），也就能够更好的根据住房面积来预测房价。要知道，预测才是我们的最终目的，而非拟合。
 
 <div style="text-align:center">
 <img src="../attachments/正规化.png" width="500"></img>
@@ -47,10 +49,11 @@ Repeat{
 $$
 
 \begin{align*}
-\theta_0 &=\theta_0-\alpha\frac{1}{m}\sum\limits_{i=1}^{m}[h_\theta(x^{(i)})-y^{(i)}]x_0^{(i)} \\
+\theta_0 &=\theta_0-\alpha\frac{1}{m}\sum\limits_{i=1}^{m}(h_\theta(x^{(i)})-y^{(i)})x_0^{(i)} \\
 
-\theta_j &=\theta_j-\alpha[\frac{1}{m}\sum\limits_{i=1}^{m}[h_\theta(x^{(i)})-y^{(i)}]x_j^{(i)}+\frac{\lambda}{m}\theta_j] \quad (1) \\
+\theta_j &=\theta_j-\alpha\big(\frac{1}{m}\sum\limits_{i=1}^{m}(h_\theta(x^{(i)})-y^{(i)})x_j^{(i)}+\frac{\lambda}{m}\theta_j\big) \quad (1) \\
 
+\mbox {即：}& \\
 \theta &= \theta-\alpha*(\frac{1}{m} X^T(y-X\theta) + \frac{\lambda}{m}\theta_{j}) \quad j \neq 0
 
 \end{align*}
@@ -69,7 +72,7 @@ $$
 
 由于 $$1-\alpha\frac{\lambda}{m}\lt1$$，故而梯度下降中每次更新 $$\theta$$，同时也会去减小 $$\theta$$ 值，达到了 Regularization 的目的。
 
-在Normal Equation中，使 $$J(\theta)$$ 最小化的 $$\theta$$值为：
+如果使用正规方程，则使 $$J(\theta)$$ 最小化的 $$\theta$$ 值为：
 
 $$
 
@@ -98,15 +101,14 @@ Repeat{
 $$
 
 \begin{align*}
-\theta_0 &=\theta_0-\alpha\frac{1}{m}\sum\limits_{i=1}^{m}[h_\theta(x^{(i)})-y^{(i)}]x_0^{(i)} \\
+\theta_0 &=\theta_0-\alpha\frac{1}{m}\sum\limits_{i=1}^{m}(h_\theta(x^{(i)})-y^{(i)})x_0^{(i)} \\
 
-\theta_j &=\theta_j-\alpha[\frac{1}{m}\sum\limits_{i=1}^{m}[h_\theta(x^{(i)})-y^{(i)}]x_j^{(i)}+\frac{\lambda}{m}\theta_j] \\
+\theta_j &=\theta_j-\alpha\big(\frac{1}{m}\sum\limits_{i=1}^{m}(h_\theta(x^{(i)})-y^{(i)})x_j^{(i)}+\frac{\lambda}{m}\theta_j\big) \\
 
+\mbox {即：}& \\
 \theta &= \theta - \alpha*(\frac{1}{m} X^T(y-g(X\theta)) + \frac{\lambda}{m}\theta_{j}) \quad j \neq 0
 \end{align*}
 
 $$
 
 }
-
-> 注意，逻辑回归和线性回归预测函数 $$h_\theta(x)$$ 二者是不同的。
