--- a/逻辑回归/codes/线性决策边界.md
+++ b/逻辑回归/codes/线性决策边界.md
@@ -1,6 +1,9 @@
 程序示例--线性决策边界
 ============
 
+回归模块
+--------
+
 在逻辑回归模块 `logical_regression.py` 中，实现了批量梯度下降法（bgd）以及随机梯度下降法（sgd），同时，支持正规化方程
 
 ```python
