--- a/神经网络/codes/多分类问题.md
+++ b/神经网络/codes/多分类问题.md
@@ -10,7 +10,7 @@
 我们的神经网络设计如下，包含 1 个隐含层，隐层含 25 个神经元，：
 
 <div style="text-align: center">
-<img src="../attachments/手写字符集的网络设计.jpg" width="300"></img>
+<img src="../attachments/神经网络手写字符集.png" width="400"></img>
 </div>
 
 ```python
