--- a/线性回归/articles/多项式回归.md
+++ b/线性回归/articles/多项式回归.md
@@ -1,7 +1,7 @@
 多项式回归
 ===========
 
-在上节的[回归问题](https://yoyoyohamapi.gitbooks.io/mit-ml/content/%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92/%E5%9B%9E%E5%BD%92%E9%97%AE%E9%A2%98/article.html)中，我们通过如下函数来预测对应房屋面积的房价：
+在线性回归中，我们通过如下函数来预测对应房屋面积的房价：
 
 $$
 
@@ -19,13 +19,13 @@ $$
 
 这就是[多项式](https://zh.wikipedia.org/wiki/%E5%A4%9A%E9%A0%85%E5%BC%8F)回归。
 
-如下图所示，多项式回归得到了更好的拟合曲线，但我们也发现，在房屋面积足够大时，曲线反而出现了下沿，这意味着房价反而随着在房屋面积足够大时，与面积成反比，这明显不符合可观规律（虽然我们很渴望这样的情况出现）：
+如下图所示，多项式回归得到了更好的拟合曲线。但我们也发现，在房屋面积足够大时，曲线反而出现了下沿，这意味着房价反而随着在房屋面积足够大时，与面积成反比，这明显不符合可观规律（虽然我们很渴望这样的情况出现）：
 
 <div style="text-align:center">
 <img src="../attachments/polynomial.png" width="500"></img>
 </div>
 
-故而，进一步地，我们考虑加上三次方项目或者替换二次方项为开方，得到如下两种预测：
+进一步地，我们考虑加上三次方项目或者替换二次方项为开方，得到如下两种预测：
 
 $$
 
