--- a/逻辑回归/articles/01分类问题.md
+++ b/逻辑回归/articles/01分类问题.md
@@ -10,16 +10,7 @@ h_\theta (x) \leq 0.5 => y=0
 
 $$
 
-下面两幅图都是完成的线性预测，在第一幅图中，拟合曲线成功的区分了 0、1 两类，在第二幅图中，如果我们新增了一个输入（右上的 **X** 所示），此时拟合曲线发生变化，由第一幅图中的紫色线旋转到第二幅图的蓝色线，导致本应被视作 1 类的 X 被当做了 0 类。
-
-另外，传统线性回归预测函数只是预测范围：
-
-$$
-
-h_\theta (x) \gt 1 \\
-h_\theta (x) \lt 0
-
-$$
+下面两幅图展示了线性预测。在第一幅图中，拟合曲线成功的区分了 0、1 两类，在第二幅图中，如果我们新增了一个输入（右上的 **X** 所示），此时拟合曲线发生变化，由第一幅图中的**紫色线**旋转到第二幅图的**蓝色线**，导致本应被视作 1 类的 X 被误分为了 0 类：
 
 <div style="text-align:center">
 <img src="../attachments/线性回归处理01分类1.png" width="500"></img>
@@ -28,5 +19,3 @@ $$
 <div style="text-align:center">
 <img src="../attachments/线性回归处理01分类2.png" width="500"></img>
 </div>
-
-综上，使用线性回归来处理 0/1 分类问题总是困难重重的，因此，人们定义了逻辑回归来完成 0/1 分类问题，逻辑一词也代表了**是（1）**和**非（0）**。
